--- a/config/gce.yaml
+++ b/config/gce.yaml
@@ -1,4 +1,9 @@
-# TODO(ojarjur): Add usage information.
+# Google Deployment Manager template for creating a todo tracker deployment in a project
+# Usage:
+# $ gcloud components update
+# $ gcloud components update preview
+# $ gcloud preview deployment-manager templates create todo_tracks_template --template-file config/gce.yaml
+# $ gcloud preview deployment-manager deployments --region=us-central1 create --template=todo_tracks_template todo_tracks_deployment
 name: todo-tracks
 modules:
   network:
@@ -45,25 +50,6 @@ modules:
 
 actions:
   install-todo:
-    # TODO(ojarjur): Figure out how to make pull app id by default.
     commands: [
-      "apt-get -qqy update",
-      # Install git from backport, base wheezy git is 1.7.x which isn't
-      # compatible with gcloud init.
-      "apt-get -qqy -t wheezy-backports install git",
-      # Update to latest gcloud.
-      "gcloud --quiet components update",
-      "gcloud --quiet components update preview",
-      # Initialize/clone git repo.
-      "mkdir -p repo; cd repo; gcloud init todo-tracks",
-      # Copy over todo binary from Google Cloud Storage bucket.
-      # TODO(ojarjur): Considering using wget.
-      "gsutil cp gs://todo-track-bin/todos /repo/todo-tracks/default/",
-      # Set executable bit on todo binary.
-      "chmod +x /repo/todo-tracks/default/todos",
-      # Start running todo server.
-      "cd /repo/todo-tracks/default; ./todos --todo_regex=\"TODO([(]|:)\" &",
-      # Configure cronjob to pull git repo every minute.
-      "echo \"* * * * * su -s /bin/sh root -c 'cd /repo/todo-tracks/default && /usr/bin/git pull'\" >> /tmp/crontab.txt",
-      "crontab /tmp/crontab.txt"
+      "%file:gce.sh",
     ]
