--- a/.github/workflows/mirror-pull-requests.yaml
+++ b/.github/workflows/mirror-pull-requests.yaml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Fetch upstream refs
         run: |
-          git fetch origin '+refs/heads/*:refs/heads/*'
+          git fetch origin '+refs/heads/*:refs/remotes/origin/*'
+          git fetch origin '+refs/heads/master:refs/heads/master' || true
           git fetch origin '+refs/tags/*:refs/tags/*'
           git fetch origin '+refs/pull/*:refs/pull/*'
 
